--- a/PUC_MVP_2.ipynb
+++ b/PUC_MVP_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMjGISwQE/cHdO+xnG/i1wJ",
+      "authorship_tag": "ABX9TyOXUQDYRQTPWfVbIY1zJgPp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
         "\n",
         "**Matrícula**: 405205000163\n",
         "\n",
-        "Dataset: Iris Dataset"
+        "**Dataset**: Indian Liver Patient Records"
       ],
       "metadata": {
         "id": "7Ih-J97YyYnR"
@@ -46,7 +46,7 @@
       "source": [
         "# Descrição do Problema\n",
         "\n",
-        "O conjunto de dados Iris é um conjunto de dados multivariado que consiste em medidas de flores de três espécies diferentes de Íris: Iris setosa, Iris versicolor e Iris virginica. O objetivo principal é classificar a espécie de Íris com base em quatro características de suas flores: comprimento da sépala, largura da sépala, comprimento da pétala e largura da pétala."
+        "O conjunto de dados *Indian Liver Patient Records* contém informações laboratoriais e clínicas de pacientes, com o objetivo principal de prever a presença ou ausência de doenças hepáticas. Para isso, o dataset reúne medidas bioquímicas como níveis enzimáticos (ALT, AST), bilirrubina, proteínas totais, albumina, além de dados demográficos como idade e sexo. A proposta deste trabalho é investigar essas características e construir um modelo capaz de identificar precocemente pacientes que necessitam de avaliação médica especializada."
       ],
       "metadata": {
         "id": "YW_JS-EEBFaR"
@@ -59,11 +59,15 @@
         "\n",
         "As hipóteses que tracei são as seguintes:\n",
         "\n",
-        "- As diferentes espécies de Íris podem ser distinguidas com base nas medições de suas sépalas e pétalas?\n",
+        "* Pacientes com níveis elevados de bilirrubina e enzimas hepáticas (AST, ALT) têm maior probabilidade de apresentar doença hepática.\n",
         "\n",
-        "- Existe uma correlação entre comprimento da pétala e largura da pétala?\n",
+        "* Existe relação entre o nível de albumina e a presença da doença hepática?\n",
         "\n",
-        "- A espécie Iris setosa é mais facilmente separável das outras duas espécies?"
+        "* Homens são mais frequentemente diagnosticados com doença hepática do que mulheres?\n",
+        "\n",
+        "* Pacientes mais velhos tendem a apresentar um risco maior para o desenvolvimento de doença hepática?\n",
+        "\n",
+        "* Medidas como a proporção entre albumina e globulina são bons indicadores para diferenciar pacientes saudáveis de doentes?"
       ],
       "metadata": {
         "id": "Gm6mOo5PBYwr"
@@ -85,7 +89,7 @@
       "source": [
         "## Seleção de Dados\n",
         "\n",
-        "O dataset Iris é um conjunto de dados amplamente disponível e frequentemente incluído em bibliotecas de aprendizado de máquina, como *scikit-learn* no Python. Não é necessária uma etapa de seleção de dados externa, pois o dataset já está curado e pronto para uso."
+        "O dataset *Indian Liver Patient Records* foi obtido do repositório Kaggle e contém informações laboratoriais e demográficas de pacientes com e sem doenças hepáticas. Por se tratar de um dataset real e não-curado, foi necessário carregar o arquivo CSV bruto e inspecionar a estrutura para verificar a qualidade dos dados antes da análise. Nessa etapa inicial, selecionamos todos os atributos disponíveis para uso, pois eles são potencialmente relevantes para o problema e não há necessidade de filtragem prévia de colunas."
       ],
       "metadata": {
         "id": "N91bTLbiBxrm"
@@ -96,13 +100,19 @@
       "source": [
         "## Atributos do Dataset\n",
         "\n",
-        "O dataset Iris contém 150 amostras, com 50 amostras de cada uma das três espécies de Íris. Possui cinco atributos:\n",
+        "O dataset Indian Liver Patient Records contém 583 registros, sendo 416 de pacientes COM doença hepática e 167 de pacientes SEM doença hepática. Há 11 atributos:\n",
         "\n",
-        "- ***sepal length*** (comprimento da sépala em cm)\n",
-        "- ***sepal width*** (largura da sépala em cm)\n",
-        "- ***petal length*** (comprimento da pétala em cm)\n",
-        "- ***petal width*** (largura da pétala em cm)\n",
-        "- ***species*** (espécie de Íris: setosa, versicolor, virginica)"
+        "- **Age**: Idade do paciente\n",
+        "- **Gender**: Sexo do Paciente\n",
+        "- **Total Bilirubin**: Bilirrubina Total (mg/dL)\n",
+        "- **Direct Bilirubin**: Bilirrubina Conjugada (mg/dL)\n",
+        "- **Alkaline Phosphotase**: Fosfatase Alcalina (UI/L)\n",
+        "- **Alamine Aminotransferase**: Alanina Aminotransferase (UI/L)\n",
+        "- **Aspartate Aminotransferase**: Aspartato Aminotransferase (UI/L)\n",
+        "- **Total Protiens**: Proteínas Totais (g/dL)\n",
+        "- **Albumin**: Albumina (g/dL)\n",
+        "- **Albumin and Globulin Ratio**: Razão Albumina/Globulina\n",
+        "- **Label**: Classificação (com doença hepática ou saudável)"
       ],
       "metadata": {
         "id": "FC6QJHhWBnzH"
@@ -127,6 +137,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "NÂO ESQUECER DE SEPARAR TRAIN E TEST"
+      ],
+      "metadata": {
+        "id": "WL_69PU5NdZE"
+      }
     },
     {
       "cell_type": "markdown",
