--- a/PUC_MVP_2.ipynb
+++ b/PUC_MVP_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOK46/6oqv8jWPJrYlnbOlH",
+      "authorship_tag": "ABX9TyOUfru8wnJw10DGloLqun15",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,7 @@
       "source": [
         "## Atributos do Dataset\n",
         "\n",
-        "O dataset *Indian Liver Patient Records* contém 583 registros, sendo 416 de pacientes COM doença hepática e 167 de pacientes SEM doença hepática. Há 11 atributos:\n",
+        "O dataset *Indian Liver Patient Records* contém 583 amostras, sendo 416 de pacientes COM doença hepática e 167 de pacientes SEM doença hepática. Há 11 atributos:\n",
         "\n",
         "- **Age**: Idade do paciente\n",
         "- **Gender**: Sexo do Paciente\n",
@@ -113,7 +113,7 @@
         "- **Aspartate Aminotransferase**: Aspartato Aminotransferase (UI/L)\n",
         "- **Total Protiens**: Proteínas Totais (g/dL)\n",
         "- **Albumin**: Albumina (g/dL)\n",
-        "- **Albumin and Globulin Ratio**: Razão Albumina/Globulina\n",
+        "- **Albumin and Globulin Ratio**: Razão Albumina/Globulina (%)\n",
         "- **Dataset**: Classificação (com doença hepática ou saudável)"
       ],
       "metadata": {
@@ -123,21 +123,24 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Bibliotecas necessárias"
+        "#Bibliotecas necessárias e carga de dados"
       ],
       "metadata": {
-        "id": "WNDINbqvGi_x"
+        "id": "aoH0jBbaY4Vz"
       }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "YSvk8WI-xuQ0"
       },
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns"
       ]
     },
     {
@@ -150,7 +153,7 @@
       "metadata": {
         "id": "oG7dWpbF02CZ"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -165,9 +168,9 @@
           "height": 206
         },
         "id": "6nZIhdhnST5a",
-        "outputId": "22da85ab-89f5-4c73-cfa2-990a9c52870b"
+        "outputId": "2213376c-4c38-420c-a48f-c3fa6219c8d9"
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +199,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5fb0e2a3-c1f4-46fe-96f3-b21b38e4e6ba\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-8c30ad06-32fc-417c-ad91-ccab7c07c950\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -305,7 +308,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5fb0e2a3-c1f4-46fe-96f3-b21b38e4e6ba')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c30ad06-32fc-417c-ad91-ccab7c07c950')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -357,12 +360,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5fb0e2a3-c1f4-46fe-96f3-b21b38e4e6ba button.colab-df-convert');\n",
+              "        document.querySelector('#df-8c30ad06-32fc-417c-ad91-ccab7c07c950 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5fb0e2a3-c1f4-46fe-96f3-b21b38e4e6ba');\n",
+              "        const element = document.querySelector('#df-8c30ad06-32fc-417c-ad91-ccab7c07c950');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -382,8 +385,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-7b150d22-98ad-42b7-9766-4ddfe240a92b\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7b150d22-98ad-42b7-9766-4ddfe240a92b')\"\n",
+              "    <div id=\"df-e486d590-b196-40ae-bd7a-7e8bf2cd1bb8\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-e486d590-b196-40ae-bd7a-7e8bf2cd1bb8')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -502,7 +505,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-7b150d22-98ad-42b7-9766-4ddfe240a92b button');\n",
+              "            document.querySelector('#df-e486d590-b196-40ae-bd7a-7e8bf2cd1bb8 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -519,9 +522,27 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 12
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Análise de Dados"
+      ],
+      "metadata": {
+        "id": "WNDINbqvGi_x"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Total e Tipo das Instâncias"
+      ],
+      "metadata": {
+        "id": "B6kW7qyLciyb"
+      }
     },
     {
       "cell_type": "code",
@@ -534,9 +555,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6fJxextvVpCa",
-        "outputId": "44212016-8d01-4ef3-9eb2-f03602b55a12"
+        "outputId": "a3cacc58-4c23-4e92-fea4-de03d1d6f1c0"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -563,6 +584,33 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "O dataset contém 583 amostras e 11 atributos, sendo 10 numéricos e apenas um categórico (Gender). Todos os campos estão completos, exceto Albumin_and_Globulin_Ratio, que tem 4 valores ausentes. O alvo (Dataset) está codificado numericamente e o consumo de memória é baixo (~50 KB), facilitando o processamento."
+      ],
+      "metadata": {
+        "id": "xVfnsX-1afCr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "COLOCAR gráfico distribuição de dataset e gender"
+      ],
+      "metadata": {
+        "id": "7wD6DsQOc80b"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Estatísticas descritivas"
+      ],
+      "metadata": {
+        "id": "9OkJ7QPVZFWK"
+      }
     },
     {
       "cell_type": "code",
@@ -978,25 +1026,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "NÂO ESQUECER DE SEPARAR TRAIN E TEST"
+        "A maioria das variáveis apresenta grande variabilidade (desvios-padrão elevados), como Alkaline_Phosphotase, Alamine_Aminotransferase e Aspartate_Aminotransferase. Isso sugere que os pacientes têm quadros clínicos bem heterogêneos.\n",
+        "\n",
+        "Há valores máximos extremamente distantes da média em várias colunas (por exemplo, Aspartate_Aminotransferase vai até 4929 contra uma média de ~110), o que indica a presença de outliers.\n",
+        "\n",
+        "Algumas variáveis têm uma distribuição assimétrica, pois a mediana (50%) é bem menor que a média, como em Total_Bilirubin e Direct_Bilirubin, sugerindo que poucos casos com níveis muito altos estão puxando a média para cima."
       ],
       "metadata": {
-        "id": "WL_69PU5NdZE"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Requisitos e composição da nota:\n",
-        "* (1,0 pt) Execução sem erros:o notebook deve poder ser executado pelo professor do início ao fim sem erros no Google Colab.\n",
-        "* (2,0 pts) Documentação consistente:utilize blocos de texto que expliquem textualmente cada etapa e cada decisão do seu código, contando uma história completa e compreensível, do início ao fim.\n",
-        "* (1,0 pt) Código limpo:seu código deve estar legível e organizado. Devem ser utilizadas as boas práticas de codificação vistas nas disciplinas Programação orientada a objetose Engenharia de software para ciência de dados, mas não é necessário que você crie classes no seu código.\n",
-        "* (2,0 pts) Análise de dados:após cada gráfico, você deverá escrever um parágrafo resumindo os principais achados, analisando os resultados e levantando eventuais pontos de atenção.\n",
-        "* (2,0 pts) Checklist:você deverá responder às perguntas (aplicáveis ao seu dataset) da checklist fornecida, utilizando-a como guia para o desenvolvimento do trabalho.\n",
-        "* (2,0 pts) Capricho e qualidade do trabalho como um todo."
-      ],
-      "metadata": {
-        "id": "wcKXhUDy5pYK"
+        "id": "6wepgDSXf56T"
       }
     },
     {
@@ -1020,6 +1057,29 @@
       ],
       "metadata": {
         "id": "i-LX1ZHb08a4"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Requisitos e composição da nota:\n",
+        "* (1,0 pt) Execução sem erros:o notebook deve poder ser executado pelo professor do início ao fim sem erros no Google Colab.\n",
+        "* (2,0 pts) Documentação consistente:utilize blocos de texto que expliquem textualmente cada etapa e cada decisão do seu código, contando uma história completa e compreensível, do início ao fim.\n",
+        "* (1,0 pt) Código limpo:seu código deve estar legível e organizado. Devem ser utilizadas as boas práticas de codificação vistas nas disciplinas Programação orientada a objetose Engenharia de software para ciência de dados, mas não é necessário que você crie classes no seu código.\n",
+        "* (2,0 pts) Análise de dados:após cada gráfico, você deverá escrever um parágrafo resumindo os principais achados, analisando os resultados e levantando eventuais pontos de atenção.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wcKXhUDy5pYK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "NÂO ESQUECER DE SEPARAR TRAIN E TEST"
+      ],
+      "metadata": {
+        "id": "WL_69PU5NdZE"
       }
     }
   ]
