--- a/PUC_MVP_2.ipynb
+++ b/PUC_MVP_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlqeq2I43IGHQ2m5y4HyZX",
+      "authorship_tag": "ABX9TyMbaRNMj05u74QKySWYR8kl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -597,7 +597,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#Distribuição de pacientes quanto ao sexo\n",
+        "\"\"\"\n",
+        "Distribuição de pacientes quanto ao sexo\n",
+        "Utilizei o método map para facilitar o entendimento do gráfico uma vez que o atributo está em inglês.\n",
+        "\"\"\"\n",
         "sns.countplot(x=bronze['Gender'].map({'Male': 'Masculino', 'Female': 'Feminino'}))\n",
         "plt.title('Distribuição de sexo dos pacientes')\n",
         "plt.xlabel('Sexo')\n",
@@ -611,9 +614,9 @@
           "height": 472
         },
         "id": "QottDg6Rkmkc",
-        "outputId": "da13852b-55f3-4d4b-d82c-7951883ae94d"
+        "outputId": "d16eb393-e411-4dbc-d687-f30a45160387"
       },
-      "execution_count": 27,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "display_data",
@@ -630,7 +633,10 @@
     {
       "cell_type": "code",
       "source": [
-        "#Distribuição de pacientes quanto ao estado hepático\n",
+        "\"\"\"\n",
+        "Distribuição de pacientes quanto ao estado hepático\n",
+        "Utilizei o método map para facilitar o entendimento do gráfico uma vez que o atributo já está codificado numericamente.\n",
+        "\"\"\"\n",
         "sns.countplot(x=bronze['Dataset'].map({1: 'Doente', 2: 'Saudável'}))\n",
         "plt.title('Distribuição por estado hepático')\n",
         "plt.xlabel('Estado hepático')\n",
@@ -643,9 +649,9 @@
           "height": 473
         },
         "id": "EED4UCFulZDM",
-        "outputId": "51c256f3-e665-4267-e17c-f65a3460332e"
+        "outputId": "d00ec14a-2340-470c-cbc4-306575ad3c57"
       },
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
